# Voxtide

./: .gitignore  Cargo.toml  RELEASE_NOTES.md  index.html  overlay.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/voxtide-core/: Cargo.toml
crates/voxtide-core/src/: config.rs  error.rs  keychain.rs  latency.rs  lib.rs  session.rs  speaker_map.rs
crates/voxtide-core/src/audio/: cpal_pipeline.rs  loopback.rs  macos_loopback.rs  mic.rs  mix.rs  mock.rs  mod.rs  resampler.rs  webview_mic.rs  windows_loopback.rs
crates/voxtide-core/src/persistence/: mod.rs  sessions.rs  tokens.rs
crates/voxtide-core/src/persistence/migrations/: 0001_init.sql  0002_epoch_ts.sql
crates/voxtide-core/src/translation/: mock.rs  mod.rs  soniox.rs  tokens.rs
crates/voxtide-core/tests/: audio_chunker.rs  audio_loopback.rs  audio_macos.rs  audio_mic.rs  audio_mock.rs  audio_pipeline.rs  audio_planar.rs  audio_resampler.rs  audio_windows.rs  config.rs  error.rs  keychain.rs  latency.rs  persistence_open.rs  persistence_sessions.rs  persistence_tokens.rs  session_context_switch.rs  session_double_start.rs  session_e2e.rs  smoke.rs  soniox_config.rs  soniox_e2e.rs  soniox_parser.rs  soniox_reconnect.rs  soniox_stall.rs  speaker_map.rs  translation_mock.rs
crates/voxtide-core/tests/fixtures/: soniox_endpoint_replay.jsonl  soniox_two_way_replay.jsonl
design/v1/: chat-transcript.md
design/v1/project/: index.html  voxtide.jsx
design/v2/: BRIEF.md  HANDOFF.md  chat-transcript.md
design/v2/project/: index.html  voxtide.jsx
docs/: packaging.md  versioning.md
docs/superpowers/specs/: 2026-05-12-voxtide-design.md  2026-05-14-delete-transcript-design.md  2026-05-15-pinyin-and-font-size-design.md  2026-06-23-mic-in-system-audio-design.md  2026-06-29-android-conversation-mode-design.md  2026-07-01-desktop-context-presets-design.md  2026-07-01-mid-session-context-switch-design.md
scripts/: android-release.sh  build-icons.ts  generate-master-icon.ts  release.sh
src/: app.css  main.ts  overlay.ts  types.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: events.rs  hotkey.rs  lib.rs  main.rs  overlay_follow.rs  state.rs
src-tauri/src/commands/: config.rs  devices.rs  keychain.rs  lifecycle.rs  mod.rs  overlay.rs  sessions.rs
src-tauri/tests/: keychain_commands.rs
src/components/: AndroidUpdateBanner.svelte  FacePane.svelte  PermissionBanner.svelte  UpdateBanner.svelte
src/components/chrome/: TrafficLights.svelte  VoxWindow.svelte
src/components/icons/: Icon.svelte  WaveGlyph.svelte  paths.ts
src/components/overlay/: HoverStrip.svelte  OverlayWindow.svelte
src/components/settings/: ApiKeySection.svelte  AppearanceSection.svelte  ContextSection.svelte  DefaultLanguagesSection.svelte  DefaultSourceSection.svelte  HotkeySection.svelte  ReadingSection.svelte  SettingsSheet.svelte
src/components/sidebar/: ConfirmDeleteSheet.svelte  SearchBox.svelte  SessionItem.svelte  Sidebar.svelte
src/components/status/: LevelMeter.svelte  StatusBar.svelte
src/components/toolbar/: AudioSourcePicker.svelte  ContextPicker.svelte  IconBtn.svelte  LangChip.svelte  LangPair.svelte  LangPicker.svelte  ModeToggle.svelte  PrimaryBtn.svelte  Toolbar.svelte
src/components/transcript/: Column.svelte  EmptyState.svelte  Line.svelte  NoApiKey.svelte  ReadingControls.svelte  RubyText.svelte  SpeakerChip.svelte  TranscriptPane.svelte
src/lib/: context.ts  format.ts  ipc.ts  languages.ts  miccapture.ts  modes.ts  pinyin.ts  speakerColor.ts  stores.svelte.ts  version.ts
src/routes/: FaceToFaceView.svelte  MainApp.svelte  OverlayApp.svelte
src/theme/: theme.ts  tokens.css
tests/: confirm-delete-sheet.test.ts  context-picker.test.ts  context-section.test.ts  context.test.ts  face-to-face.test.ts  format.test.ts  icon.test.ts  ipc.test.ts  line.test.ts  main-app.test.ts  miccapture.test.ts  overlay.test.ts  pinyin.test.ts  reading-controls.test.ts  ruby-text.test.ts  settings.test.ts  setup.ts  sidebar.test.ts  smoke.test.ts  speakerColor.test.ts  statusbar.test.ts  stores.test.ts  theme.test.ts  toolbar.test.ts  transcript.test.ts  version.test.ts
