[workspace]
resolver = "2"
members = ["crates/voxtide-core", "src-tauri"]

[workspace.package]
edition = "2021"
rust-version = "1.77"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hophuongnam/Voxtide"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
async-trait = "0.1"
sqlx = { version = "0.7", default-features = false, features = ["sqlite", "runtime-tokio-rustls", "macros"] }
cpal = "0.15"
rubato = "0.15"
futures-util = "0.3"
hound = "3"
tempfile = "3"
parking_lot = "0.12"
