[package]
name = "voxtide"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
voxtide-core = { path = "../crates/voxtide-core" }
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
tauri-plugin-positioner = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3"
parking_lot.workspace = true
async-trait.workspace = true
dirs = "5"

[dev-dependencies]
tokio = { workspace = true }
tempfile.workspace = true

[features]
default = []
