[package]
name = "voxtide"
version = "0.1.14"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "voxtide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
voxtide-core = { path = "../crates/voxtide-core" }
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-window-state = "2"
dirs = "5"

[dev-dependencies]
tokio = { workspace = true }
tempfile.workspace = true

[features]
default = []
