[package]
name = "voxtide-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
tokio-tungstenite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
sqlx.workspace = true
cpal.workspace = true
rubato.workspace = true
futures-util.workspace = true
url.workspace = true
bytes.workspace = true
parking_lot.workspace = true
hound.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.56", features = ["Win32_Media_Audio", "Win32_System_Com"] }

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
